Style lesson completion and fixed contrast on lesson text

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -42,6 +42,7 @@ $brand-text--dark: #5E5C5E;
 $brand-text--medium: #7D7D7D;
 $labels: #b2b2b2;
 $link-hover-success:#2D9DAA;
+$brand-text--learn:#FFB5D8; // for lesson panel
 
 // Accent: transparent light or dark color use on top of backgrounds
 
